# semantic-folder

./: .env.example  .funcignore  .gitignore  CLAUDE.md  Datamantics_Semantic_Folder_Grounding.docx  Makefile  function_app.py  host.json  pyproject.toml  requirements.txt  semantic-folder-grounding.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
infra/: app_registration.tf  diagram.md  function_app.tf  keyvault.tf  main.tf  outputs.tf  providers.tf  resource_group.tf  storage.tf  terraform.tfvars.example  variables.tf
iterations/: gap-1-to-2.md  gap-3-to-4.md  gap-5-to-6.md  it-1.in.md  it-1.out.md  it-2.in.md  it-2.out.md  it-3.in.md  it-3.out.md  it-4.in.md  it-4.out.md  it-5.in.md  it-5.out.md  it-6.in.md  it-6.out.md  it-7.in.md  it-7.out.md  it-8.in.md  it-8.out.md
src/semantic_folder/: __init__.py  config.py
src/semantic_folder/description/: cache.py  describer.py  generator.py  models.py
src/semantic_folder/functions/: http_trigger.py  timer_trigger.py
src/semantic_folder/graph/: __init__.py  client.py  delta.py  models.py
src/semantic_folder/orchestration/: __init__.py  processor.py
tests/: conftest.py
tests/integration/: test_anthropic_smoke.py  test_graph_integration.py
tests/unit/: test_smoke.py
tests/unit/config/: test_config.py
tests/unit/description/: test_cache.py  test_describer.py  test_generator.py  test_models.py
tests/unit/graph/: test_client.py  test_delta.py  test_models.py
tests/unit/orchestration/: test_processor.py
